third_party/move/move-compiler-v2/tests/unit_test/test/parametric_redundant_zero_arg.move
// Two zero-arg #[test] rows with no differentiating expected_failure are redundant.
address 0x1 {
module M {
    #[test]
    #[test]
    fun zero_arg_redundant() {}
}
}
